RESOLVED FIXED145270
Regression(r179293): We no longer call destroyDecodedData() on CachedResources on memory pressure
https://bugs.webkit.org/show_bug.cgi?id=145270
Summary Regression(r179293): We no longer call destroyDecodedData() on CachedResource...
Chris Dumez
Reported 2015-05-21 10:25:42 PDT
We no longer call destroyDecodedData() on CachedResources on memory pressure after r179293. In r179293, we started calling MemoryCache::evictResources() on memory pressure instead of MemoryCache::pruneToPercentage(0). However, unlike MemoryCache::pruneToPercentage(), it appears MemoryCache::evictResources() removes the CachedResources from the memory cache without calling destroyDecodedData() on them. This caused a regression on Membuster. Radar: <rdar://problem/20734901>
Attachments
Patch (2.72 KB, patch)
2015-05-21 10:39 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2015-05-21 10:39:39 PDT
Andreas Kling
Comment 2 2015-05-21 10:42:38 PDT
Comment on attachment 253530 [details] Patch Fantastic job hunting this down!! r=me
Chris Dumez
Comment 3 2015-05-21 10:45:29 PDT
Comment on attachment 253530 [details] Patch Clearing flags on attachment: 253530 Committed r184720: <http://trac.webkit.org/changeset/184720>
Chris Dumez
Comment 4 2015-05-21 10:45:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.